fix: minor spacing fix in welcome and dashboard

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,10 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: var(--spacing-xxxl);
+  padding: 0;
   text-align: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .logo {
@@ -12,11 +14,11 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter var(--transition-slow);
-  
+
   &:hover {
     filter: drop-shadow(0 0 2em #646cffaa);
   }
-  
+
   &.react:hover {
     filter: drop-shadow(0 0 2em #61dafbaa);
   }
@@ -26,6 +28,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
